# beatroot-vamp

./: Agent.cpp  Agent.h  AgentList.cpp  AgentList.h  BeatRootProcessor.cpp  BeatRootProcessor.h  BeatRootVampPlugin.cpp  BeatRootVampPlugin.h  BeatTracker.cpp  BeatTracker.h  CITATION  CMakeLists.txt  Event.h  Induction.cpp  Induction.h  Makefile  Makefile.inc  Makefile.linux  Makefile.mingw32  Makefile.osx  Peaks.cpp  Peaks.h  README  beatroot-config.cmake.in  beatroot-vamp.cat  beatroot-vamp.n3
.github/workflows/: ci.yml
cmake/: Findvamp-sdk.cmake
